# ocaml-swagger

./: .ocamlformat  dune-project  swagger.opam
.github/workflows/: main.yml
src/: codegen_schema.ml  gen.ml  mod.ml  param.ml  type.ml  util.ml  val.ml
test/: dune
